--- a/Lettuce/Lettuce.csproj
+++ b/Lettuce/Lettuce.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Debugger.Designer.cs">
       <DependentUpon>Debugger.cs</DependentUpon>
     </Compile>
+    <Compile Include="GoToAddressForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GoToAddressForm.Designer.cs">
+      <DependentUpon>GoToAddressForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="HardwareConfiguration.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,10 +76,19 @@
     <Compile Include="MemoryConfiguration.Designer.cs">
       <DependentUpon>MemoryConfiguration.cs</DependentUpon>
     </Compile>
+    <Compile Include="MemoryDisplay.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MemoryDisplay.Designer.cs">
+      <DependentUpon>MemoryDisplay.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Debugger.resx">
       <DependentUpon>Debugger.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GoToAddressForm.resx">
+      <DependentUpon>GoToAddressForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HardwareConfiguration.resx">
       <DependentUpon>HardwareConfiguration.cs</DependentUpon>
@@ -83,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MemoryConfiguration.resx">
       <DependentUpon>MemoryConfiguration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MemoryDisplay.resx">
+      <DependentUpon>MemoryDisplay.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
