--- a/Tomato/Tomato.csproj
+++ b/Tomato/Tomato.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -44,6 +45,7 @@
   <ItemGroup>
     <Compile Include="DCPU.cs" />
     <Compile Include="Hardware\Device.cs" />
+    <Compile Include="Hardware\GenericKeyboard.cs" />
     <Compile Include="Hardware\LEM1802.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
