--- a/Lettuce/Lettuce.csproj
+++ b/Lettuce/Lettuce.csproj
@@ -49,12 +49,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeEntry.cs" />
     <Compile Include="Debugger.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Debugger.Designer.cs">
       <DependentUpon>Debugger.cs</DependentUpon>
     </Compile>
+    <Compile Include="DisassemblyDisplay.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DisassemblyDisplay.Designer.cs">
+      <DependentUpon>DisassemblyDisplay.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FastDisassembler.cs" />
     <Compile Include="GoToAddressForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +97,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Debugger.resx">
       <DependentUpon>Debugger.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DisassemblyDisplay.resx">
+      <DependentUpon>DisassemblyDisplay.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GoToAddressForm.resx">
       <DependentUpon>GoToAddressForm.cs</DependentUpon>
