--- a/Lettuce/Lettuce.csproj
+++ b/Lettuce/Lettuce.csproj
@@ -62,6 +62,7 @@
     <Compile Include="DisassemblyDisplay.Designer.cs">
       <DependentUpon>DisassemblyDisplay.cs</DependentUpon>
     </Compile>
+    <Compile Include="Extensions.cs" />
     <Compile Include="FastDisassembler.cs" />
     <Compile Include="GoToAddressForm.cs">
       <SubType>Form</SubType>
