--- a/Tomato/Tomato.csproj
+++ b/Tomato/Tomato.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Hardware\GenericClock.cs" />
     <Compile Include="Hardware\GenericKeyboard.cs" />
     <Compile Include="Hardware\LEM1802.cs" />
+    <Compile Include="Hardware\SCP2000.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
