--- a/Tomato/Tomato.csproj
+++ b/Tomato/Tomato.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Hardware\GenericKeyboard.cs" />
     <Compile Include="Hardware\LEM1802.cs" />
     <Compile Include="Hardware\SCP2000.cs" />
+    <Compile Include="DCPUMemory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
