--- a/Pickles/Pickles.csproj
+++ b/Pickles/Pickles.csproj
@@ -56,7 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="defaults">
+    <None Include="example">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
