--- a/Tomato/Tomato.csproj
+++ b/Tomato/Tomato.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Hardware\LEM1802.cs" />
     <Compile Include="Hardware\SCP2000.cs" />
     <Compile Include="HexTypeEditor.cs" />
+    <Compile Include="InterruptEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
